# property-portfolio-renewal

./: .env  README.md  adk_agent_methods.txt  main.py  pyproject.toml  requirements.txt
.adk/: session.db
agent_a2a/: change_detection_server.py
agent_a2a/agent_cards/: change_detection_agent.json  portfolio_orchestrator.json  property_reevaluation_agent.json  renewal_recommendation_agent.json
agent_a2a/client/: a2a_client.py  recommendation_client.py  reevaluation_client.py
agent_a2a/server/: a2a_server.py  recommendation_a2a_server.py  reevaluation_a2a_server.py
agents/: __init__.py  agent.py  change_detection.py  portfolio_orchestrator.py  property_reevaluation.py  renewal_recommendation.py
agents/.adk/: session.db
data/portfolios/: demo.json  midwest_office.json  northeast_mixed.json  southeast_retail.json
data/profiles/: default_underwriter.json
demo_scripts/: demo_scenarios.md
mock_apis/: portfolio_loader.py
prompt_manager/: __init__.py  manager.py
prompt_manager/templates/: change_detection.py  orchestrator.py  property_reevaluation.py  re_evaluation.py  renewal_recommendation.py
results/: PF-TEST-001.json
telemetry/: __init__.py  arize_setup.py
user_profile/: profile_store.py
utils/: llm_client.py
